# PyHyperScattering

./: .gitattributes  .gitignore  .travis.yml  CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  LICENSE  MANIFEST.in  README.md  cms_giwaxs_support_roadmap.txt  docs-requirements.txt  env.yml  index.html  pyproject.toml  requirements-bluesky.txt  requirements-performance.txt  requirements-ui.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  main.yml  publish-docs.yml  python-publish.yml  python-test-publish-all.yml
2021-09-03_pl-0.1_cyl10_core5_sp60/: Material0.txt  Material1.txt  Material2.txt  check.txt  config.txt  cyrsoxs.4897.out  job.slurm  metadata.txt  morphology_gen.txt
PyHyperScattering/: ALS11012RSoXSLoader.py  FileLoader.py  IntegrationUtils.py  PFEnergySeriesIntegrator.py  PFGeneralIntegrator.py  RSoXS.py  SST1RSoXSDB.py  SST1RSoXSLoader.py
_includes/: ntd2d_variants.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: PyHyperScattering.rst  rsoxs.rst  utilities.rst
docs/source/development/: api_concepts.rst  idx_development.rst  index.rst  scope.rst
docs/source/getting_started/: environment_setup.rst  example_data.rst  idx_getting_started.rst  index.rst  installation.rst  learning-to-fly.rst  loading.rst  utilities.rst
docs/source/reference_API/: PyHyperScattering.rst
docs/source/release_notes/: index.rst
docs/source/user_guide/: idx_user_guide.rst  index.rst  search_catalog.rst
en/0.2.10/: genindex.html  index.html  py-modindex.html  search.html
en/0.2.10/_static/: ntd2d.css  ntd2d_menu.html
en/0.2.2/: searchindex.js
en/0.2.2/_static/: ntd2d.css  ntd2d_menu.html
en/0.2.3/: index.html  py-modindex.html  searchindex.js
en/0.2.3/_static/: ntd2d.css  ntd2d_menu.html
en/0.2.4/: objects.inv
en/0.2.4/_static/: ntd2d.css  ntd2d_menu.html
en/0.2.7/_static/: ntd2d.css  ntd2d_menu.html
en/0.2.8/: searchindex.js
en/0.2.8/_static/: ntd2d.css  ntd2d_menu.html
en/0.2.9/_static/: ntd2d.css  ntd2d_menu.html
en/103-rename-summarize_run-to-match-tiledbluesky-nomenclature/: py-modindex.html
en/103-rename-summarize_run-to-match-tiledbluesky-nomenclature/_downloads/: PyHyperScattering.epub
en/104-restructure-docs-along-diataxis-framework/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/105_merge/: genindex.html  searchindex.js
en/106_merge/: objects.inv
en/107_merge/: index.html  py-modindex.html
en/110-bug-in-loading-image-masks/: genindex.html  index.html  py-modindex.html  search.html
en/112-userwarning-error-while-time-integrating-monitors/: index.html  searchindex.js
en/124-test-add-CI-for-SST1RSoXS/: py-modindex.html
en/129-feat-sst1rsoxsdb-normalize-dataset-return-names-to-100/: genindex.html  objects.inv  searchindex.js
en/133-feat-generalize-ar-calculations-chi-center-polarizations-reflections/: genindex.html  search.html
en/134-feat-data-browser-widget/: genindex.html  objects.inv  searchindex.js
en/138-NEXAFSloading/: genindex.html  objects.inv  searchindex.js
en/140-sst1-repeat-exposures/: searchindex.js
en/142-add-developer-docs/: objects.inv  searchindex.js
en/184-import-trouble-with-pygix/: genindex.html
en/190_dimension_hint_for_count/: genindex.html
en/2-multi-polarization-anisotropy/: objects.inv
en/201-sst1rsoxsdb-proposalid-dtype-change/: searchindex.js
en/204-docs-race-condition/: py-modindex.html
en/31-search-catalog-docs/: objects.inv  searchindex.js
en/31-search_catalog_docs_page/: genindex.html
en/53-tidy-up-imports/: searchindex.js
en/57-feat-general-beamcenter-calibration/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
en/87_merge/: genindex.html  index.html  py-modindex.html  search.html
en/96_merge/: index.html  searchindex.js
en/Issue154_Updatetest_SST1DBLoader/: index.html  py-modindex.html  search.html
en/Issue178_FixLoadRun/: genindex.html  objects.inv  searchindex.js
en/Issue180_AddEnvironmentSetupInstructions/: objects.inv  searchindex.js
en/gha-node-update/: search.html
en/guyer-patch-1/: index.html  py-modindex.html  search.html
en/integrateImageStack_energy/: searchindex.js
en/latest/: genindex.html  index.html  search.html  searchindex.js
en/main/: genindex.html  index.html  objects.inv  searchindex.js
en/numpy2_compat/: objects.inv
en/sst1-non-monitor-loading/: genindex.html  objects.inv  searchindex.js
en/stable/: genindex.html  py-modindex.html  search.html
en/update-readme/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
example_data/: readme_example_data.md
mask-test-pack/: 37738-CB_TPD314K1_mask.tif  liquidMask.json
peter-dafs/: HDR-dev.ipynb  SST1-dev.ipynb
src/PyHyperScattering/: ALS11012RSoXSLoader.py  BeamCentering.py  CMSGIWAXSLoader.py  DrawMask.py  ESRFID2Loader.py  FileIO.py  FileLoader.py  Fitting.py  GIWAXS.py  GeoCheck.py  HDR.py  IntegrationUtils.py  Nexus.py  PFEnergySeriesIntegrator.py  PFGeneralIntegrator.py  PGGeneralIntegrator.py  PlotTools.py  RSoXS.py  SMIRSoXSLoader.py  SMITiled.py  SST1RSoXSDB.py  SST1RSoXSLoader.py  TiledLoader.py  Untitled.ipynb  WPIntegrator.py  __init__.py  _version.py  cyrsoxsLoader.py  integrate.py  load.py  optional_dependencies.py  util.py
test/: test_11012Loader.py
tests/: README_TEST_DATA.md  test_11012Loader.py  test_AR.py  test_CMSLoader.py  test_Fitting_lorentz.py  test_PFIntegrators.py  test_RSoXS.py  test_SMILoader.py  test_SST1DBLoader.py  test_SST1Loader.py  test_WPintegrator.py  test_autoversioning.py  test_cyrsoxsLoader.py  test_example.py  test_minimal_fileloader.py  test_pf_general_integrator_basic.py
tutorial/: Demo - XArrayResonantScattering.ipynb  DrawMask tutorial.ipynb  Fitting tutorial.ipynb  SST1 data tutorial.ipynb  db pyhyper.ipynb
tutorial/pickles/: README.md
tutorial/plotting_shotcuts_branch/: plotting_shortcuts_sst1_carbon_prsoxs.ipynb
(+340 files in other folders)
