[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "PyHyperScattering"
dynamic = ["version"]
authors = [
    {name = "Peter Beaucage", email = "peter.beaucage@nist.gov"},
]
description = "Utilities for loading, reducing, fitting, and plotting hyperspectral x-ray and neutron scattering data."
readme = "README.md"
license = "NIST-PD-fallback"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "h5py",
    "numpy",
    "pandas",
    "pyfai",
    "scikit-image",
    "scipy",
    "pillow",
    "xarray",
    "bottleneck",
    "tqdm",
    "astropy",
    "fabio",
    "pydata_sphinx_theme",
    "numexpr!=2.8.5,!=2.8.6"
]

[project.optional-dependencies]
grazing = [    
    "silx==2.0.0",
    "pygix"
    ]
bluesky = [
    "tiled[client]>=0.1.0a74",
    "bluesky-tiled-plugins"
]
performance = [
    "pyopencl",
    "dask",
    "cupy"
]
ui = [
    "holoviews",
    "hvplot",
    "ipyaggrid",
    "matplotlib"
]
doc = [
        "sphinx",
        "pydata_sphinx_theme"
        ]
dev = ["flake8",
       "pytest", 
       "coverage",
       "pybind11",
       "wheel"
        ]
test =  [
        "pytest",
         "black",
         "codecov",
         "pylint"
         ]
all-nogpu = [
    "tiled[client]>=0.1.0a74",
    "bluesky-tiled-plugins",
    "pyopencl",
    "dask",
    "holoviews",
    "hvplot",
    "sphinx",
    "pydata_sphinx_theme",
    "pytest",
    "black",
    "codecov",
    "pylint",
    "flake8",
       "pytest", 
       "coverage",
       "pybind11",
       "wheel"
]
all = [
    "tiled[client]>=0.1.0a74",
    "bluesky-tiled-plugins",
    "pygix",
    "pyopencl",
    "dask",
    "cupy",
    "holoviews",
    "hvplot",
    "silx==2.0.0",
    "sphinx",
    "pydata_sphinx_theme",
    "pytest",
    "black",
    "codecov",
    "pylint",
    "flake8",
       "pytest", 
       "coverage",
       "pybind11",
       "wheel"
]

[project.urls]
"Homepage" = "https://github.com/usnistgov/pyhyperscattering"
"Bug Tracker" = "https://github.com/usnistgov/pyhyperscattering/issues"
"Project Site" = "https://www.nist.gov/laboratories/tools-instruments/polarized-resonant-soft-x-ray-scattering-p-rsoxs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/PyHyperScattering/_version.py"
versionfile_build = "PyHyperScattering/_version.py"
tag_prefix = ""
parentdir_prefix = "pyhyperscattering-"
