[metadata]
name = PyHyperScattering
version = attr: PyHyperScattering.__version__
author = Peter Beaucage
author_email = peter.beaucage@nist.gov
description = Utilities for loading, reducing, fitting, and plotting hyperspectral x-ray and neutron scattering data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usnistgov/pyhyperscattering
project_urls =
    Github = https://github.com/usnistgov/pyhyperscattering
    Project Site = https://www.nist.gov/laboratories/tools-instruments/polarized-resonant-soft-x-ray-scattering-p-rsoxs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: Freely Distributable
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    h5py
    numpy
    pandas
    pyfai
    pyopencl
    scikit-image
    scipy
    pillow 
    xarray 
    tqdm
[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/PyHyperScattering/_version.py
versionfile_build = PyHyperScattering/_version.py
tag_prefix = 
parentdir_prefix = pyhyperscattering-
